Checkpoint 2 - cg9cf3aaec

--- a/recipe_app_frontend/src/index.html
+++ b/recipe_app_frontend/src/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Angular</title>
+  <title>Recipe Explorer</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Browse delicious recipes with ingredients and step-by-step instructions.">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
